--- a/css/styles.css
+++ b/css/styles.css
@@ -59,6 +59,10 @@ p {
     font-size: 4rem;
   }
 
+  h2 {
+    font-size: 3.5rem;
+  }
+   
   h3 {
     font-size: 2.2rem;
   }
@@ -70,4 +74,67 @@ p {
   p {
     font-size: 1.8rem;
   }
+}
+
+/* Buttons */
+.btn a {
+  color: #f2f2f2;
+  display: block;
+  text-decoration: none;
+}
+
+.btn {
+  border-radius: 1.5rem;
+  border: 0;
+  display: block;
+  margin: 2rem 0;
+  padding: .5rem 2rem;
+  transition: all 0.3s;
+}
+
+.btn--big {
+  border-radius: 3rem;
+  padding: 0;
+}
+
+.btn--big a {
+  padding: 1rem 2.5rem;
+}
+
+.btn--ghost {
+  background-color: transparent;
+  border: 1px solid var(--color-primary);
+  border-radius: 4rem;
+  padding: 0;
+}
+
+.btn--ghost:hover {
+  background-color: var(--color-primary);
+}
+
+.btn--ghost a {
+  color: var(--color-primary);
+  padding: 1.5rem 8rem;
+}
+
+.btn--ghost a:hover {
+  color: #f2f2f2;
+}
+
+.btn--primary {
+  background-color: var(--color-primary);
+}
+
+.btn--primary:hover {
+  background-color: #ceb0c5;
+}
+
+.btn--primary a:hover {
+  color: var(--color-primary);
+}
+
+@media screen and (min-width: 1024px) {
+  .btn {
+    font-size: 1.8rem;
+  }    
 }
