Creating grid styles.

--- a/css/styles.css
+++ b/css/styles.css
@@ -350,3 +350,38 @@ nav .lists--inline .btn:hover {
     white-space: nowrap;
   }
 }
+
+/* Grid and Flexbox */
+.grid {
+  display: grid;
+}
+
+@media screen and (min-width: 768px) {
+  .grid--1x2 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .grid--1x3 {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 100%;
+  padding: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .row {
+    flex-wrap: nowrap;
+  }
+
+  .column {
+    flex: 50%;
+  }
+}	
