--- a/css/styles.css
+++ b/css/styles.css
@@ -840,3 +840,38 @@ nav .lists--inline .btn:hover {
     width: 170px;
   }
 }
+
+/* Procedures Block */
+.procedures {
+  padding: 1.5rem 0 2rem;
+}
+
+.procedures--heading {
+  margin: 0 auto 5rem;
+  max-width: 500px;
+  padding: 2rem;
+  text-align: center;
+}
+
+.grid.procedures__content {
+  gap: 6rem 5rem;
+  margin: 0 2rem;
+}
+
+.procedures__body .icon-container {
+  margin-bottom: 2.5rem;
+}
+
+.procedures__body p {
+  margin: 1.5rem 0 0;
+}
+
+.procedures .btn {
+  margin: 6rem auto;
+}
+
+@media screen and (min-width: 768px) {
+  .procedures--heading {
+    margin-bottom: 4rem;
+  }
+}
