Assembling, Fixing Layout Issues & Button Effects

--- a/components/block-procedures.html
+++ b/components/block-procedures.html
@@ -1,7 +1,7 @@
 <section class="block container procedures">
   <h2 class="procedures--heading">Connecting Everyone to the Capital Market</h2>
-  <div class="grid grid--1x3 procedures__content">
-    <div class="procedures__body">
+  <div class="grid grid--1x3 procedures__body">
+    <div class="media__object">
       <span class="icon-container">
         <embed class="icons" src="/images/dollar 1.svg" type="" />
       </span>
@@ -12,7 +12,7 @@
         neque nemo.
       </p>
     </div>
-    <div class="procedures__body">
+    <div class="media__object">
       <span class="icon-container">
         <embed class="icons" src="/images/settings 1.svg" type="" />
       </span>
@@ -23,7 +23,7 @@
         neque nemo.
       </p>
     </div>
-    <div class="procedures__body">
+    <div class="media__object">
       <span class="icon-container">
         <embed class="icons" src="/images/monitor-screen 1.svg" type="" />
       </span>
